fix opacity flicker

--- a/michael/scss/style.scss
+++ b/michael/scss/style.scss
@@ -95,8 +95,8 @@ $sm-bp: 850px;
     opacity: 1;
   }
   
-  // -webkit-backface-visibility: hidden;
-  // backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 
 }
 
